# recipe_viewer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cross  deploy.sh  docker-compose.yml
.agent/workflows/: build-x86.md
examples/: fetch_recipes.rs  process_spaznix.rs
migrations/: 20240101000000_initial_schema.sql  20260103000000_fractional_ratings.sql
src/: ai.rs  handlers.rs  lib.rs  main.rs  models.rs  scraper.rs  search.rs  state.rs  templates.rs
templates/: auth_required.html  convert.html  detail.html  form.html  index.html  layout.html  print.html
tests/: integration_tests.rs  scraper_tests.rs  ui_tests.rs
