[package]
name = "recipe_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.8"
axum-extra = { version = "0.12.3", features = ["cookie", "cookie-private"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
headless_chrome = "1.0.20"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12.26", features = ["blocking", "json"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite", "regexp"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
url = "2.5.7"
urlencoding = "2.1.3"
